yandex test (+stage)

--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -2,6 +2,7 @@ $bg-black: #1F1F1F;
 $bg-yellow: #FBCE51;
 $bg-grey: #D6D6D6;
 $bg-red: #F54932;
+$bg-blue: #3057A2;
 
 $tablet-width: 768px;
 $desktop-width: 1366px;
