--- a/scss/layout/_lecture.scss
+++ b/scss/layout/_lecture.scss
@@ -72,7 +72,7 @@
     font-family: "Golos Text";
     font-weight: normal;
     font-size: 20px;
-    color: #3057A2;
+    color: $bg-blue;
   }
   &__discount {
     margin-right: 10px;
